<resources>
    <string name="app_name">Felicity</string>
    <string name="sing_out">Sing Out</string>
    <string name="alquileres">Alquileres</string>
    <string name="button">Button</string>
    <string name="clientes">Clientes</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="espacio">Espacio</string>
    <string name="gastos">Gastos</string>
    <string name="reservar">reservar</string>
    <string name="consular">consular</string>
    <string name="title_activity_clientes">ClientesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>