<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Principal">

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sing_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/alquileres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alquileres"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/clientes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clientes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alquileres"
        app:layout_constraintVertical_bias="0.045"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/gastos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gastos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientes"
        app:layout_constraintVertical_bias="0.038"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/estadisticas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/estadisticas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gastos"
        app:layout_constraintVertical_bias="0.043"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/espacio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/espacio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estadisticas"
        app:layout_constraintVertical_bias="0.054"/>




</androidx.constraintlayout.widget.ConstraintLayout>